[TASK] Fix user image alignment in history block

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,10 +6,6 @@
   margin-bottom: 8px;
 }
 
-.gh-username img {
-  width: 32px;
-}
-
 #profile-bio {
   margin-top: 10px;
 }
